fixed z-index error with age popup

--- a/public/css/age-verification.css
+++ b/public/css/age-verification.css
@@ -4,7 +4,7 @@
 	left: 0;
 	height: 100%;
 	width: 100%;
-	z-index: 1100;
+	z-index: 110000;
 	background-color: rgba(0,0,0,.8);
 }
 
@@ -14,7 +14,7 @@
 
 #modal_content {
 	position: fixed;
-	z-index: 1101;
+	z-index: 110100;
 	margin: 0 auto;
 	background-color:#fff;
 	font-size: 12px;
